SERVER-32058 Rollback in-memory catalog changes on collMod abort